<resources>
    <string name="app_name">Android Academy 2020</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="movie_reviews">%d reviews</string>
    <string name="movies_list_film_time">%d min</string>

    <string name="error_movie_not_found">Фильм не найден</string>

    <string name="movie_details_back">Back</string>
    <string name="movie_details_title">Avengers: End game</string>
    <string name="movies_list_allowed_age_template">%d+</string>
    <string name="movie_details_genre">Action, Adventure, Fantasy</string>
    <string name="movies_list_reviews_template">%d reviews</string>
    <string name="movie_details_storyline">Storyline</string>
    <string name="movie_details_story_description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="movie_details_cast">Cast</string>
    <string name="movie_details_actor1_name">Robert Downey Jr.</string>
    <string name="movie_details_actor2_name">Chris Evans</string>
    <string name="movie_details_actor3_name">Mark Ruffalo</string>
    <string name="movie_details_actor4_name">Chris Hemsworth</string>

    <string name="movie_details_list_duration">137 min</string>
</resources>